--- a/views/includes/Track.jade
+++ b/views/includes/Track.jade
@@ -8,6 +8,9 @@ append .row-fluid
         dt album
         dd 
           a(href=result.album.url, target="_blank") #{result.album.name}
+        if result.album.availability
+          dt Territories
+            dd #{result.album.availability}
     if result.album.image
       .span2
         img(src=result.album.image, width=100, height=100)
