Trying to figure out why spotify is no longer working

--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -10,7 +10,7 @@ block content
     .span10
       a(href="/Arcade%20Fire") Arcade Fire 
       a(href="/Arcade%20Fire/Neon%20Bible") Neon Bible 
-      a(href="/Arcade%20Fire/Neon%20/Intervention") Intervention 
+      a(href="/Arcade%20Fire/Neon%20Bible/Intervention") Intervention 
   .row
     .span10
       a(href="/Talking%20Heads/") Talking Heads 
