--- a/views/includes/Track.jade
+++ b/views/includes/Track.jade
@@ -13,7 +13,10 @@ append .row-fluid
           dd #{result.length}
         if result.album.availability
           dt Territories
-            dd #{result.album.availability}
+            dd 
+              each territory in result.album.availability
+                a(href="?limit-territory=#{territory}") #{territory}
+                | 
     if result.album.image
       .span2
         img(src=result.album.image, width=100, height=100)
