--- a/views/includes/Track.jade
+++ b/views/includes/Track.jade
@@ -15,7 +15,7 @@ append .row-fluid
           dt Territories
             dd 
               each territory in result.album.availability
-                a(href="?limit-territory=#{territory}") #{territory}
+                a(href="?limit-territory=#{territory}", title="Limit results to #{territory}") #{territory}
                 | 
     if result.album.image
       .span2
